--- a/src/app/components/transaction-summary.component.css
+++ b/src/app/components/transaction-summary.component.css
@@ -4,7 +4,7 @@
   justify-content: space-between;
   align-items: stretch;
 
-  padding: 10px 15px;
+  padding: 0.5em 0.75em;
   max-width: 100%;
   max-height: 100px;
 
@@ -140,7 +140,7 @@
 
   &::before {
     @nest :host(.declined) & {
-      content: "Declined due to ";
+      content: 'Declined due to ';
     }
   }
 
@@ -156,6 +156,7 @@
   flex-flow: column nowrap;
   justify-content: center;
   align-items: flex-end;
+  --align: flex-end;
 
   & m-amount {
     font-size: 1.2rem;
